welcome.lessons.welcome.methods.flowerpot.FlowerCase.scala.error
FlowerCase:103: error: method resolution overrides nothing
override def resolution() {
             ^